force-app/main/default/objects/RGC_Biology_Updates__c/RGC_Biology_Updates__c.object-meta.xml
<CustomObject>
    <label>RGC Biology Update</label>
    <nameField>
        <label>RGC Biology Updates</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RGC Biology Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>