force-app/main/default/objects/RGC_Biology_Updates__c/fields/Association__c.field-meta.xml
<CustomField>
    <fullName>Association__c</fullName>
    <label>Association</label>
    <type>TextArea</type>
</CustomField>