force-app/main/default/objects/RGC_Biology_Updates__c/fields/Direction_of_effect__c.field-meta.xml
<CustomField>
    <fullName>Direction_of_effect__c</fullName>
    <label>Direction of effect</label>
    <type>TextArea</type>
</CustomField>