force-app/main/default/objects/RGC_Biology_Updates__c/fields/Gene_Name__c.field-meta.xml
<CustomField>
    <fullName>Gene_Name__c</fullName>
    <label>Gene Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>