force-app/main/default/objects/RGC_Biology_Updates__c/fields/Gene_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Gene_Symbol__c</fullName>
    <label>Gene Symbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>