force-app/main/default/objects/RGC_Biology_Updates__c/fields/HPP__c.field-meta.xml
<CustomField>
    <fullName>HPP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HPP</label>
    <type>Checkbox</type>
</CustomField>