force-app/main/default/objects/RGC_Biology_Updates__c/fields/Key_Experiments__c.field-meta.xml
<CustomField>
    <fullName>Key_Experiments__c</fullName>
    <label>Key Experiment(s)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>