force-app/main/default/objects/RGC_Biology_Updates__c/fields/Modeling_Champion__c.field-meta.xml
<CustomField>
    <fullName>Modeling_Champion__c</fullName>
    <label>Modeling Champion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>