force-app/main/default/objects/RGC_Biology_Updates__c/fields/Modeling_Tier__c.field-meta.xml
<CustomField>
    <fullName>Modeling_Tier__c</fullName>
    <label>Modeling Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>