force-app/main/default/objects/RGC_Biology_Updates__c/fields/Mouse__c.field-meta.xml
<CustomField>
    <fullName>Mouse__c</fullName>
    <label>Mouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>