force-app/main/default/objects/RGC_Biology_Updates__c/fields/Next_steps__c.field-meta.xml
<CustomField>
    <fullName>Next_steps__c</fullName>
    <label>Next steps</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>