force-app/main/default/objects/RGC_Biology_Updates__c/fields/Published_data__c.field-meta.xml
<CustomField>
    <fullName>Published_data__c</fullName>
    <label>Published data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>