force-app/main/default/objects/RGC_Biology_Updates__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>In Discussion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>