force-app/main/default/objects/RGC_Biology_Updates__c/fields/TAG__c.field-meta.xml
<CustomField>
    <fullName>TAG__c</fullName>
    <label>TAG</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>FSP</fullName>
            </value>
            <value>
                <fullName>IRID</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
            <value>
                <fullName>NOA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>