force-app/main/default/objects/RGC_Biology_Updates__c/fields/TAG_Champion__c.field-meta.xml
<CustomField>
    <fullName>TAG_Champion__c</fullName>
    <label>TAG Champion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>