force-app/main/default/objects/RGC_Biology_Updates__c/fields/TAG_Sub_Project__c.field-meta.xml
<CustomField>
    <fullName>TAG_Sub_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAG Sub-Project</label>
    <referenceTo>TAG_Sub_Project__c</referenceTo>
    <relationshipLabel>RGC Biology Updates</relationshipLabel>
    <relationshipName>RGC_Biology_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>