force-app/main/default/objects/RGC_Biology_Updates__c/fields/TFA__c.field-meta.xml
<CustomField>
    <fullName>TFA__c</fullName>
    <label>TFA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auditory</fullName>
            </value>
            <value>
                <fullName>CV/F</fullName>
            </value>
            <value>
                <fullName>I&amp;I</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>M&amp;M</fullName>
            </value>
            <value>
                <fullName>Neuro</fullName>
            </value>
            <value>
                <fullName>Onc</fullName>
            </value>
            <value>
                <fullName>Opthal</fullName>
            </value>
            <value>
                <fullName>SD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>