force-app/main/default/objects/RGC_Biology_Updates__c/fields/Timeline_for_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Timeline_for_Discussion__c</fullName>
    <label>Timeline for Discussion</label>
    <type>TextArea</type>
</CustomField>