force-app/main/default/objects/RGC_Biology_Updates__c/fields/Year_Modeling_Approved__c.field-meta.xml
<CustomField>
    <fullName>Year_Modeling_Approved__c</fullName>
    <label>Year Modeling Approved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>