force-app/main/default/objects/RGC_Biology_Updates__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Gene_Name__c</columns>
    <columns>Modeling_Tier__c</columns>
    <columns>Mouse__c</columns>
    <columns>Status__c</columns>
    <columns>TAG__c</columns>
    <columns>TAG_Champion__c</columns>
    <columns>TAG_Sub_Project__c</columns>
    <columns>TFA__c</columns>
    <columns>Timeline_for_Discussion__c</columns>
    <columns>Year_Modeling_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>